New detector class EmotionDetector (Not yet done with the processing code)
Wrapped up faceDetector with the new class and the new class is passed into the cameraCourse

Preview Size reduced 320x240

--- a/app/src/main/res/layout-land/main.xml
+++ b/app/src/main/res/layout-land/main.xml
@@ -31,4 +31,9 @@
         android:layout_alignParentRight="true"
         android:layout_margin="8dp"/>
 
+    <TextView
+        android:id="@+id/emotion_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </RelativeLayout>
