--- a/app/src/main/res/layout-land/main.xml
+++ b/app/src/main/res/layout-land/main.xml
@@ -34,6 +34,8 @@
     <TextView
         android:id="@+id/emotion_text_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="dfsdfsdfsdfsadfsdfsdfsdf"
+        android:layout_alignParentRight="true" />
 
 </RelativeLayout>
