--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -33,6 +33,9 @@
     <TextView
         android:id="@+id/emotion_text_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="dfsdfsdfsdfsadfsdfsdfsdf"
+        android:layout_alignParentRight="true"
+        android:textSize="16dp"/>
 
 </RelativeLayout>
