Emotion Detector is added with frame processing code for emotions
Runtime errors

--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -34,8 +34,7 @@
         android:id="@+id/emotion_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="dfsdfsdfsdfsadfsdfsdfsdf"
-        android:layout_alignParentRight="true"
+        android:text="0"
         android:textSize="16dp"/>
 
 </RelativeLayout>
