--- a/app/src/main/res/layout-land/main.xml
+++ b/app/src/main/res/layout-land/main.xml
@@ -36,6 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Emotions"
-        android:textColor="#FF0000"/>
+        android:textColor="#FF0000"
+        android:textSize="16sp"/>
 
 </RelativeLayout>
