--- a/app/src/main/res/layout-land/main.xml
+++ b/app/src/main/res/layout-land/main.xml
@@ -26,7 +26,6 @@
         android:layout_height="wrap_content"
         android:text="FLIP"
         android:textSize="24dp"
-        android:background="@android:color/darker_gray"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_margin="8dp"/>
@@ -38,5 +37,16 @@
         android:text="Emotions"
         android:textColor="#FF0000"
         android:textSize="16sp"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="RESET"
+        android:textSize="24dp"
+        android:id="@+id/resetButton"
+        android:layout_above="@+id/flipButton"
+        android:layout_alignParentRight="true"
+        android:layout_margin="8dp"/>
+    />
 
 </RelativeLayout>
