--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -29,14 +29,6 @@
         android:layout_alignParentRight="true"
         android:layout_margin="8dp"/>
 
-    <TextView
-        android:id="@+id/result_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Results"
-        android:textColor="#FF0000"
-        android:textSize="16sp"/>
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -46,5 +38,30 @@
         android:layout_above="@+id/flipButton"
         android:layout_alignParentRight="true"
         android:layout_margin="8dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/result_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="Results"
+            android:textColor="#FF0000"
+            android:textSize="16sp"/>
+
+        <TextView
+            android:id="@+id/feedback_text_View"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="Feedback"
+            android:textColor="#FF0000"
+            android:textSize="16sp"/>
+    </LinearLayout>
+
 
 </RelativeLayout>
