--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -20,14 +20,16 @@
     </com.example.dumindut.gazedirectiondetector.ui.camera.CameraSourcePreview>
 
     <Button
-        android:id="@+id/flipButton"
+        android:id="@+id/stopButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="FLIP"
+        android:text="STOP"
         android:textSize="24dp"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_margin="8dp"/>
+        android:layout_margin="8dp"
+        android:textColor="#FF0000"/>
+
 
     <Button
         android:layout_width="wrap_content"
@@ -35,7 +37,7 @@
         android:text="RESET"
         android:id="@+id/resetButton"
         android:textSize="24dp"
-        android:layout_above="@+id/flipButton"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_margin="8dp" />
 
